Added search result output

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -434,8 +434,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 119,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: x8J6eZABdxwQlA0UFvsW\n",
+      "Score: 16.526878\n",
+      "Title: The Godfather\n",
+      "Runtime: 175\n",
+      "Plot: An organized crime dynasty's aging patriarch transfers control of his clandestine empire to his reluctant son.\n",
+      "Key Scene: James Caan's character Sonny Corleone is shot to death at a toll booth by a number of machine gun toting enemies.\n",
+      "Genre: Crime, Drama\n",
+      "Released: 1972\n",
+      "\n",
+      "ID: yMJ6eZABdxwQlA0UFvsW\n",
+      "Score: 10.201027\n",
+      "Title: The Departed\n",
+      "Runtime: 151\n",
+      "Plot: An undercover cop and a mole in the police attempt to identify each other while infiltrating an Irish gang in South Boston.\n",
+      "Key Scene: Leonardo DiCaprio's character Billy Costigan is shot to death by Matt Damon's character Colin Sullivan.\n",
+      "Genre: Crime, Drama, Thriller\n",
+      "Released: 2006\n",
+      "\n",
+      "ID: vsJ6eZABdxwQlA0UFvsW\n",
+      "Score: 9.530054\n",
+      "Title: Pulp Fiction\n",
+      "Runtime: 154\n",
+      "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
+      "Key Scene: John Travolta is forced to inject adrenaline directly into Uma Thurman's heart after she overdoses on heroin.\n",
+      "Genre: Crime, Drama\n",
+      "Released: 1994\n",
+      "\n",
+      "ID: xMJ6eZABdxwQlA0UFvsW\n",
+      "Score: 9.212539\n",
+      "Title: Goodfellas\n",
+      "Runtime: 146\n",
+      "Plot: The story of Henry Hill and his life in the mob, covering his relationship with his wife Karen Hill and his mob partners Jimmy Conway and Tommy DeVito in the Italian-American crime syndicate.\n",
+      "Key Scene: Joe Pesci's character Tommy DeVito shoots young Spider in the foot for not getting him a drink.\n",
+      "Genre: Biography, Crime, Drama\n",
+      "Released: 1990\n",
+      "\n",
+      "ID: xsJ6eZABdxwQlA0UFvsW\n",
+      "Score: 8.515005\n",
+      "Title: The Silence of the Lambs\n",
+      "Runtime: 118\n",
+      "Plot: A young F.B.I. cadet must receive the help of an incarcerated and manipulative cannibal killer to help catch another serial killer, a madman who skins his victims.\n",
+      "Key Scene: Hannibal Lecter explains to Clarice Starling that he ate a census taker's liver with some fava beans and a nice Chianti.\n",
+      "Genre: Crime, Drama, Thriller\n",
+      "Released: 1991\n",
+      "\n",
+      "ID: xcJ6eZABdxwQlA0UFvsW\n",
+      "Score: 7.1371274\n",
+      "Title: Se7en\n",
+      "Runtime: 127\n",
+      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
+      "Key Scene: Brad Pitt's character David Mills shoots John Doe after he reveals that he murdered Mills' wife.\n",
+      "Genre: Crime, Drama, Mystery, Thriller\n",
+      "Released: 1995\n",
+      "\n",
+      "ID: ycJ6eZABdxwQlA0UFvsW\n",
+      "Score: 6.947451\n",
+      "Title: The Usual Suspects\n",
+      "Runtime: 106\n",
+      "Plot: A sole survivor tells of the twisty events leading up to a horrific gun battle on a boat, which began when five criminals met at a seemingly random police lineup.\n",
+      "Key Scene: Kevin Spacey's character Verbal Kint is revealed to be the mastermind behind the crime, when his limp disappears as he walks away from the police station.\n",
+      "Genre: Crime, Mystery, Thriller\n",
+      "Released: 1995\n",
+      "\n",
+      "ID: w8J6eZABdxwQlA0UFvsW\n",
+      "Score: 6.5070043\n",
+      "Title: The Shawshank Redemption\n",
+      "Runtime: 142\n",
+      "Plot: Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.\n",
+      "Key Scene: Andy Dufresne escapes from Shawshank prison by crawling through a sewer pipe.\n",
+      "Genre: Drama\n",
+      "Released: 1994\n",
+      "\n",
+      "ID: wcJ6eZABdxwQlA0UFvsW\n",
+      "Score: 6.093292\n",
+      "Title: Inception\n",
+      "Runtime: 148\n",
+      "Plot: A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into thed of a C.E.O.\n",
+      "Key Scene: Leonardo DiCaprio explains the concept of inception to Ellen Page by using a child's spinning top.\n",
+      "Genre: Action, Adventure, Sci-Fi, Thriller\n",
+      "Released: 2010\n",
+      "\n",
+      "ID: wsJ6eZABdxwQlA0UFvsW\n",
+      "Score: 5.2886667\n",
+      "Title: The Matrix\n",
+      "Runtime: 136\n",
+      "Plot: A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.\n",
+      "Key Scene: Red pill or blue pill? Morpheus offers Neo a choice between the red pill, which will allow him to learn the truth about the Matrix, or the blue pill, which will return him to his former life.\n",
+      "Genre: Action, Sci-Fi\n",
+      "Released: 1999\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "    index=\"semantic-text-movies\",\n",
@@ -445,7 +542,11 @@
     "pretty_search_response(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-03T16:43:28.623010Z",
+     "start_time": "2024-07-03T16:43:28.407079Z"
+    }
    },
    "id": "1a8520ffc8a3efb3"
   },
@@ -480,8 +581,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 120,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: x8J6eZABdxwQlA0UFvsW\n",
+      "Score: 56.279396\n",
+      "Title: The Godfather\n",
+      "Runtime: 175\n",
+      "Plot: An organized crime dynasty's aging patriarch transfers control of his clandestine empire to his reluctant son.\n",
+      "Key Scene: James Caan's character Sonny Corleone is shot to death at a toll booth by a number of machine gun toting enemies.\n",
+      "Genre: Crime, Drama\n",
+      "Released: 1972\n",
+      "\n",
+      "ID: yMJ6eZABdxwQlA0UFvsW\n",
+      "Score: 31.22543\n",
+      "Title: The Departed\n",
+      "Runtime: 151\n",
+      "Plot: An undercover cop and a mole in the police attempt to identify each other while infiltrating an Irish gang in South Boston.\n",
+      "Key Scene: Leonardo DiCaprio's character Billy Costigan is shot to death by Matt Damon's character Colin Sullivan.\n",
+      "Genre: Crime, Drama, Thriller\n",
+      "Released: 2006\n",
+      "\n",
+      "ID: xMJ6eZABdxwQlA0UFvsW\n",
+      "Score: 29.793152\n",
+      "Title: Goodfellas\n",
+      "Runtime: 146\n",
+      "Plot: The story of Henry Hill and his life in the mob, covering his relationship with his wife Karen Hill and his mob partners Jimmy Conway and Tommy DeVito in the Italian-American crime syndicate.\n",
+      "Key Scene: Joe Pesci's character Tommy DeVito shoots young Spider in the foot for not getting him a drink.\n",
+      "Genre: Biography, Crime, Drama\n",
+      "Released: 1990\n",
+      "\n",
+      "ID: vsJ6eZABdxwQlA0UFvsW\n",
+      "Score: 29.314661\n",
+      "Title: Pulp Fiction\n",
+      "Runtime: 154\n",
+      "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
+      "Key Scene: John Travolta is forced to inject adrenaline directly into Uma Thurman's heart after she overdoses on heroin.\n",
+      "Genre: Crime, Drama\n",
+      "Released: 1994\n",
+      "\n",
+      "ID: xsJ6eZABdxwQlA0UFvsW\n",
+      "Score: 26.167364\n",
+      "Title: The Silence of the Lambs\n",
+      "Runtime: 118\n",
+      "Plot: A young F.B.I. cadet must receive the help of an incarcerated and manipulative cannibal killer to help catch another serial killer, a madman who skins his victims.\n",
+      "Key Scene: Hannibal Lecter explains to Clarice Starling that he ate a census taker's liver with some fava beans and a nice Chianti.\n",
+      "Genre: Crime, Drama, Thriller\n",
+      "Released: 1991\n",
+      "\n",
+      "ID: xcJ6eZABdxwQlA0UFvsW\n",
+      "Score: 21.956827\n",
+      "Title: Se7en\n",
+      "Runtime: 127\n",
+      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
+      "Key Scene: Brad Pitt's character David Mills shoots John Doe after he reveals that he murdered Mills' wife.\n",
+      "Genre: Crime, Drama, Mystery, Thriller\n",
+      "Released: 1995\n",
+      "\n",
+      "ID: ycJ6eZABdxwQlA0UFvsW\n",
+      "Score: 21.464703\n",
+      "Title: The Usual Suspects\n",
+      "Runtime: 106\n",
+      "Plot: A sole survivor tells of the twisty events leading up to a horrific gun battle on a boat, which began when five criminals met at a seemingly random police lineup.\n",
+      "Key Scene: Kevin Spacey's character Verbal Kint is revealed to be the mastermind behind the crime, when his limp disappears as he walks away from the police station.\n",
+      "Genre: Crime, Mystery, Thriller\n",
+      "Released: 1995\n",
+      "\n",
+      "ID: v8J6eZABdxwQlA0UFvsW\n",
+      "Score: 12.967991\n",
+      "Title: The Dark Knight\n",
+      "Runtime: 152\n",
+      "Plot: When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.\n",
+      "Key Scene: Batman angrily responds 'I’m Batman' when asked who he is by Falcone.\n",
+      "Genre: Action, Crime, Drama, Thriller\n",
+      "Released: 2008\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "    index=\"semantic-text-movies\",\n",
@@ -508,7 +688,11 @@
     "pretty_search_response(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-03T16:43:50.284850Z",
+     "start_time": "2024-07-03T16:43:50.072583Z"
+    }
    },
    "id": "4f72f7906b918dc1"
   },
