--- a/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
+++ b/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
@@ -86,8 +86,11 @@
    "source": [
     "from collections import defaultdict\n",
     "from getpass import getpass\n",
-    "import json\n",
+    "from typing import Any, Union\n",
     "\n",
+    "from datasets.arrow_dataset import Dataset\n",
+    "from datasets.dataset_dict import DatasetDict, IterableDatasetDict\n",
+    "from datasets.iterable_dataset import IterableDataset\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch.helpers import bulk\n",
     "from sentence_transformers import CrossEncoder\n",
@@ -237,7 +240,9 @@
     "\n",
     "\n",
     "def index_corpus(\n",
-    "    corpus: datasets.arrow_dataset.Dataset, index_name: str, es_client: Elasticsearch\n",
+    "    corpus: Union[DatasetDict, Dataset, IterableDatasetDict, IterableDataset],\n",
+    "    index_name: str,\n",
+    "    es_client: Elasticsearch,\n",
     "):\n",
     "    \"\"\"\n",
     "    Pushing documents over to our index\n",
@@ -277,7 +282,7 @@
    "outputs": [],
    "source": [
     "def retrieve(\n",
-    "    queries: datasets.arrow_dataset.Dataset,\n",
+    "    queries: Union[DatasetDict, Dataset, IterableDatasetDict, IterableDataset],\n",
     "    es_client: Elasticsearch,\n",
     "    index_name: str,\n",
     "    size: int = 10,\n",
@@ -367,7 +372,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_corpus(dataset_name: str):\n",
+    "def download_corpus(\n",
+    "    dataset_name: str,\n",
+    ") -> Union[DatasetDict, Dataset, IterableDatasetDict, IterableDataset]:\n",
     "    \"\"\"\n",
     "    Download corpus from Huggingface\n",
     "    Args:\n",
