--- a/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
+++ b/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
@@ -732,12 +732,10 @@
     "    if len(top_k_doc_ids) == 0:\n",
     "        continue\n",
     "\n",
-    "    labeled_docs = [doc_id for doc_id in top_k_doc_ids if doc_id in qrels[qid]]\n",
-    "    judge_rate_per_query.append(len(labeled_docs) / len(top_k_doc_ids))\n",
+    "    nr_labeled_docs = sum(1 for doc_id in top_k_doc_ids if doc_id in qrels[qid])\n",
+    "    judge_rate_per_query.append(nr_labeled_docs / len(top_k_doc_ids))\n",
     "\n",
-    "print(\n",
-    "    f'\"Judge rate\" for {DATASET} is {round(np.mean(judge_rate_per_query) * 100.0, 2)}%'\n",
-    ")"
+    "print(f'\"Judge rate\" for {DATASET} is {np.mean(judge_rate_per_query) * 100.0:.3}%')"
    ]
   },
   {
@@ -767,11 +765,11 @@
     "    if len(top_k_doc_ids) == 0:\n",
     "        continue\n",
     "\n",
-    "    labeled_docs = [doc_id for doc_id in top_k_doc_ids if doc_id in qrels[qid]]\n",
-    "    judge_rate_per_query.append(len(labeled_docs) / len(top_k_doc_ids))\n",
+    "    nr_labeled_docs = sum(1 for doc_id in top_k_doc_ids if doc_id in qrels[qid])\n",
+    "    judge_rate_per_query.append(nr_labeled_docs / len(top_k_doc_ids))\n",
     "\n",
     "print(\n",
-    "    f'\"Judge rate\" for {DATASET} (reranked) is {round(np.mean(judge_rate_per_query) * 100.0, 2)}%'\n",
+    "    f'\"Judge rate\" for {DATASET} (reranked) is {np.mean(judge_rate_per_query) * 100.0:.3}%'\n",
     ")"
    ]
   },
