fixed article slug

--- a/supporting-blog-content/building-rag-with-elastic-and-mistral/building_rag_with_elastic_and_mistral.ipynb
+++ b/supporting-blog-content/building-rag-with-elastic-and-mistral/building_rag_with_elastic_and_mistral.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -22,7 +8,7 @@
       "source": [
         "# Building RAG with Elastic and [Mistral](https://docs.mistral.ai/getting-started/quickstart/)\n",
         "\n",
-        "This notebook is a hands-on demonstration of how to create a multilingual RAG system. The following steps were extracted from the article [\"Building RAG with Elastic and Mistral\"](https://www.elastic.co/search-labs/blog/building-rag-with-elastic-and-mistral)."
+        "This notebook is a hands-on demonstration of how to create a multilingual RAG system. The following steps were extracted from the article [\"Building RAG with Elastic and Mistral\"](https://www.elastic.co/search-labs/blog/building-multilingual-rag-with-elastic-and-mistral)."
       ]
     },
     {
@@ -38,16 +24,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rt5UtcodVCP4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "rt5UtcodVCP4",
         "outputId": "4fa1ecd6-e0e7-4585-ff36-31c04ea6cda5"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting elasticsearch==8.14\n",
             "  Downloading elasticsearch-8.14.0-py3-none-any.whl (480 kB)\n",
@@ -113,10 +99,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FmLboc-eVNVf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "FmLboc-eVNVf",
         "outputId": "cd6b1b3e-2acb-442f-b5e8-d745471dbbd4"
       },
       "outputs": [
@@ -173,16 +159,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VYoqPlZPQ1vF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "VYoqPlZPQ1vF",
         "outputId": "983c8b49-4fd9-4010-f074-e75b94658f82"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Embedding endpoint created successfully.\n"
           ]
@@ -356,16 +342,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "61wAGoeZ5ERE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "61wAGoeZ5ERE",
         "outputId": "399338fd-c47d-4082-c468-35d526714e66"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Data indexed successfully.\n"
           ]
@@ -408,8 +394,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{\n",
             "    \"took\": 48,\n",
@@ -505,6 +491,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1I7vTiXJvDG4"
+      },
+      "outputs": [],
       "source": [
         "# Joining the Elasticsearch retrieve context\n",
         "elastic_context=[]\n",
@@ -513,27 +504,22 @@
         "    elastic_context.append(r[\"_source\"][\"super_body\"][\"text\"])\n",
         "\n",
         "context_str= '\\n'.join(elastic_context)"
-      ],
-      "metadata": {
-        "id": "1I7vTiXJvDG4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "iVOuJFF3bQiD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "iVOuJFF3bQiD",
         "outputId": "ad30bd0a-75a8-42b6-f520-f051a84f74ed"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "    ## Question:\n",
@@ -628,8 +614,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Hola, me alegra que te hayas comunicado con nosotros. Parece que hay dos problemas distintos.\n",
             "\n",
@@ -663,24 +649,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EVoxDcVJL8Z0"
+      },
       "source": [
         "## Deleting\n",
         "\n",
         "Finally, we can delete the resources used to prevent them from consuming resources."
-      ],
-      "metadata": {
-        "id": "EVoxDcVJL8Z0"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Cleanup - Delete Index\n",
-        "es_client.indices.delete(index='multilingual-mistral', ignore=[400, 404])\n",
-        "\n",
-        "# Cleanup - Delete Embeddings Endpoint\n",
-        "es_client.inference.delete_model(inference_id='multilingual_embeddings', ignore=[400, 404])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -688,11 +668,10 @@
         "id": "-gWBPxp8L8vh",
         "outputId": "4162bca7-9355-44b3-8a80-694707793739"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<ipython-input-20-f7fb7887af9e>:2: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
             "  es_client.indices.delete(index='multilingual-mistral', ignore=[400, 404])\n",
@@ -701,16 +680,37 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "ObjectApiResponse({'acknowledged': True, 'pipelines': [], 'indexes': []})"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Cleanup - Delete Index\n",
+        "es_client.indices.delete(index='multilingual-mistral', ignore=[400, 404])\n",
+        "\n",
+        "# Cleanup - Delete Embeddings Endpoint\n",
+        "es_client.inference.delete_model(inference_id='multilingual_embeddings', ignore=[400, 404])"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
