--- a/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
+++ b/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
@@ -849,7 +849,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "The way to interpret this to say that we are 95% confident that the `nDCG@10` score in the ideal scenario lies within that interval\n",
+    "The way to interpret this would be to say that we are 95% confident that the `nDCG@10` score in the ideal scenario lies within that interval\n",
     "\n",
     "Confidence intervals can be used in the context of significance testing. For example, if we wanted to compare two pipelines (retrieval and/or reranking) on a dataset one way to do this would be to:\n",
     "* Decide on a confidence level (e.g. 90% or 95%)\n",
