Add explanation for confidence intervals (#294)
* A brief intro to confidence intervals and statistical significance

--- a/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
+++ b/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
@@ -706,6 +706,7 @@
    "source": [
     "## Bonus section\n",
     "\n",
+    "### Judge rate\n",
     "Let's do some extra analysis and try to answer the question `\"How many times is an evaluator presented with (query, document) pairs for which there is no ground truth information?\"`\n",
     "In other words, we calculate the percentage of cases where the `qrels` file contains a relevance score for a particular document in the result list.\n",
     "Let's start with BM25 by focusing on the **top-10** retrieved documents"
@@ -776,8 +777,29 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Finally, in this section we show an implementation of confidence intervals for the `nDCG@10` metric using [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) combined with the `percentile` method. It should be noted that this statistic is affected a lot by the number of queries in the dataset i.e. smaller confidence intervals are expected for larger query sets and vice versa",
-   "id": "e9fbbb8760ddc49d"
+   "source": "---",
+   "id": "1eae7142374e2f7a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Confidence intervals",
+   "id": "392ab084d5bc024"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "In this section we will briefly touch upon the concepts of `confidence intervals` and `statistical significance` and we will see how we can use them to determine whether improvements in our pipelines are significant or not.\n",
+    "\n",
+    "We can think of it as follows: Our goal is to estimate the performance of our pipeline (retrieval and/or reranking) on a target corpus. Ideally, we would like to have access to **all** queries that our end-users will run against it but of course this is impossible. Instead, we have the set of test queries provided by the benchmark and we implicitly assume that the performance on this set can act as an accurate proxy of the overall performance (in the ideal scenario).\n",
+    "\n",
+    "But we can make some extra assumptions to increase the reliability of our analysis. [Confidence intervals](https://en.wikipedia.org/wiki/Confidence_interval), a concept from statistical theory, give us a tool to handle our uncertainty. By setting a certain level of confidence, let's go with 95% in this example, we can derive a range of values that will likely contain the parameter of interest (here the performance in the **ideal** scenario). In other words, if we repeated the same process an infinite number of times (by drawing different test sets) we could be confident that in 95% of them the confidence interval would encompass the true value.\n",
+    "\n",
+    "The code below shows an example of deriving confidence intervals using [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_\\(statistics\\)) combined with the `percentile` method. It should be noted that this statistic is affected a lot by the number and the variability of queries in the dataset i.e. smaller confidence intervals are expected for larger query sets and vice versa\n",
+    " "
+   ],
+   "id": "6fb391b00a7efd58"
   },
   {
    "metadata": {},
@@ -822,6 +844,28 @@
     "get_ci_with_bootstrapping(ndcg_scores, percentile=95, nr_bootstraps=1000)"
    ],
    "id": "9f2f080185190b58"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The way to interpret this would be to say that we are 95% confident that the `nDCG@10` score in the ideal scenario lies within that interval\n",
+    "\n",
+    "Confidence intervals can be used in the context of significance testing. For example, if we wanted to compare two pipelines (retrieval and/or reranking) on a dataset one way to do this would be to:\n",
+    "* Decide on a confidence level (e.g. 90% or 95%)\n",
+    "* Compute confidence intervals for the performance of model A \n",
+    "* Compute confidence intervals for the performance of model B\n",
+    "* Check whether there is an overlap between the two intervals. \n",
+    "\n",
+    "In the last step, if there is **no** overlap we can say that the observed difference in performance between the two pipelines is **statistically significant**. "
+   ],
+   "id": "be4d62dfde0c588b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "4f8bf706821ab252"
   }
  ],
  "metadata": {
